--- a/Project/RVMDK（uv5）/motorctrl.uvprojx
+++ b/Project/RVMDK（uv5）/motorctrl.uvprojx
@@ -644,6 +644,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\User\tim\bsp_general_tim.c</FilePath>
             </File>
+            <File>
+              <FileName>bsp_debug_usart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\User\usart\bsp_debug_usart.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
